--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -1,8 +1,23 @@
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{% static 'myapp/login.css' %}">
+  <title>Login</title>
+</head>
+<body>
+
+  <div class="main">
 <h2>Login</h2>
-  <form method="post" class="form">
-    {% csrf_token %}
-    {{ form.username.label_tag }} {{ form.username }}
-    {{ form.password.label_tag }} {{ form.password }}
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
-  <p>Don't have an account? <a href="{% url 'signup' %}">Sign Up</a></p>
+<form method="post" class="form">
+  {% csrf_token %}
+  {{ form.username.label_tag }} {{ form.username }}
+  {{ form.password.label_tag }} {{ form.password }}
+  <button type="submit" class="btn btn-primary">Login</button>
+</form>
+<p>Don't have an account? <a href="{% url 'signup' %}">Sign Up</a></p>
+</div>
+</body>
+</html>
