--- a/myapp/static/myapp/login.css
+++ b/myapp/static/myapp/login.css
@@ -1,3 +1,4 @@
+/* login.css */
 
 body {
   font-family: 'Arial', sans-serif;
@@ -11,7 +12,7 @@ body {
   height: 100vh;
 }
 
-.container {
+.main {
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -19,7 +20,7 @@ body {
   width: 300px;
 }
 
-h2{
+h2 {
   color: #007bff;
   text-align: center;
 }
@@ -43,32 +44,5 @@ h2{
 
 .btn {
   background-color: #007bff;
-  color: #fff;
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: #0056b3;
-}
-
-.p-link {
-  text-align: center;
-  margin-top: 15px;
-}
-
-.p-link a {
-  color: #007bff;
-  text-decoration: none;
-}
-
-.p-link a:hover {
-  text-decoration: underline;
-}
-
-.main{
-  display: flex;
-  flex-direction: column;
+ 
 }
