--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -1,3 +1,4 @@
+{% extends 'myapp/base.html' %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -8,7 +9,7 @@
   <title>Login</title>
 </head>
 <body>
-
+  {% block body %}
   <div class="main">
 <h2>Login</h2>
 <form method="post" class="form">
@@ -18,6 +19,8 @@
   <button type="submit" class="btn btn-primary">Login</button>
 </form>
 <p>Don't have an account? <a href="{% url 'signup' %}">Sign Up</a></p>
+  
 </div>
+{% endblock %}
 </body>
 </html>
