--- a/myapp/templates/myapp/draft_blogs.html
+++ b/myapp/templates/myapp/draft_blogs.html
@@ -11,22 +11,34 @@
 </head>
 <body>
     {% block body %}
-  <div class="container">
-    <h2>Your Draft Blogs</h2></br>
-    <div style="border: 5px solid black ;">
-    {% for blog_post in draft_blogs %}
-      <div>
-        <h3 style="margin-bottom: 10px;"><a href="{% url 'blog_detail' blog_id=blog_post.id %}">{{ blog_post.title }}</a></h3>
-        <p>Category: {{ blog_post.category }}</p>
-        <p>Summary: {{ blog_post.truncated_summary }}</p>
-        <img src="{{ blog_post.image.url }}" alt="{{ blog_post.title }}">
-        <p>Published by: {{ blog_post.author.username }} at {{ blog_post.publication_date }}</p>
-      </div>
-    
-    {% endfor %}
-
-    </div>  
-  </div>
+    <div class="container" style=" max-width: 800px;
+    margin: auto;
+    padding: 20px;">
+      <h2 style="color: #007bff;
+      text-align: center;">draft blogs</h2>
+  
+      {% for blog_post in draft_blogs %}
+        <div  class="blog-card" style="
+        
+        height: 500px;
+        width: 400px;
+        border: 5px solid black;
+        border-radius: 8px;
+        margin-bottom: 20px;
+        padding: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+          <h3 style="margin-bottom: 10px;"><a href="{% url 'blog_detail' blog_id=blog_post.id %}">{{ blog_post.title }}</a></h3>
+          <p>Category: {{ blog_post.category }}</p>
+          <p>Summary: {{ blog_post.truncated_summary }}</p>
+          <img src="{{ blog_post.image.url }}" alt="{{ blog_post.title }}" style="  height: 150px;
+          width: 200px;
+          border-radius: 4px;
+          margin-top: 10px;">
+          <p class="published-info" style=" color: #777;">Published by: {{ blog_post.author.username }} at {{ blog_post.publication_date }}</p>
+        </div>
+      {% endfor %}
+  
+    </div>
   {% endblock %}
 </body>
 </html>
