--- a/myapp/templates/myapp/patient_dashboard.html
+++ b/myapp/templates/myapp/patient_dashboard.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   {% block body %}
-  <div class="container">
+  <div class="main" style="display: flex;">
+  <div class="container" style="width: 400px;">
     <h1>Patient Dashboard</h1>
     <h2>Welcome, {{ user.username }}!</h2>
     <p>Common information:</p>
@@ -31,6 +32,34 @@
     {% if user.is_doctor %}
       <a href="{% url 'add_blog_post' %}">Add Blog Post</a>
     {% endif %}
+  </div>
+
+  <div class="container_blog" style=" max-width: 500px; border:2x solid black;
+  margin: auto;
+  padding: 20px;">
+    <h2 style="color: #007bff;
+    text-align: center;">Blog Posts</h2>
+
+    {% for blog_post in blog_posts %}
+      <div  class="blog-card" style="
+      
+      height: 400px;
+      width: 400px;
+      border: 5px solid black;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      padding: 20px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+        <h3 style="margin-bottom: 10px;"><a href="{% url 'blog_detail' blog_id=blog_post.id %}">{{ blog_post.title }}</a></h3>
+        <p>Category: {{ blog_post.category }}</p>
+        <p>Summary: {{ blog_post.truncated_summary }}</p>
+        <img src="{{ blog_post.image.url }}" alt="{{ blog_post.title }}" style="  height: 150px;
+        width: 200px;
+        border-radius: 4px;
+        margin-top: 10px;">
+        <p class="published-info" style=" color: #777;">Published by: {{ blog_post.author.username }} at {{ blog_post.publication_date }}</p>
+      </div>
+    {% endfor %}
   </div>
   {% endblock %}
 </body>
