there were some error in viewing personal posted blogs,which were resolved

--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -34,7 +34,7 @@
               {% endif %}
               {% if  user.is_authenticated and user.is_doctor %}
               <a class="nav-link" href="{% url 'add_blog_post' %}">Post Blogs</a>
-              <a class="nav-link" href="{% url 'blog_list' %}">View Posted blogs</a>
+              <a class="nav-link" href="{% url 'posted_blogs' %}">View Posted blogs</a>
               <a class="nav-link" href="{% url 'draft_blogs' %}">View Draft blogs</a>
               {% endif %}
               {% if  user.is_authenticated and user.is_patient %}
